<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnightBlue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/txt_viewLL_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inputTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="end|bottom"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/resTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="monospace"
            android:gravity="end|center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"

        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:filterTouchesWhenObscured="true"
        android:fitsSystemWindows="true"
        android:persistentDrawingCache="scrolling|animation"
        android:rowCount="5">

        <Button
            style="@style/BtnStdStyle"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/c"
            android:textColor="@color/orange" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/bracers" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/parcent" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/div" />


        <Button
            style="@style/BtnStdStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/_7" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_8" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_9" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/mul" />

        <Button
            style="@style/BtnStdStyle"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/_4" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_5" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_6" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/sub" />

        <Button
            style="@style/BtnStdStyle"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/_1" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_2" />


        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_3" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/add" />

        <Button
            style="@style/BtnStdStyle"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/min_val_signs" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/_0" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/dot" />

        <Button
            style="@style/BtnStdStyle"
            android:text="@string/eq" />


    </GridLayout>

</android.widget.LinearLayout>